# Matrix

./: CMakeLists.txt
include/: buffer.hpp  cmp.hpp  dump.hpp  ibuffer.hpp  imatrix.hpp  matrix.hpp
src/: driver.cpp  main.cpp
tests/end_to_end/: CMakeLists.txt  end_to_end.sh
tests/end_to_end/answ/: 7.txt
tests/end_to_end/data/: 2.txt  6.txt  7.txt
